--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-Name: Build App
+name: Build App
 
 on:
   workflow_dispatch:
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository (main branch)
+      # Checkout the repository (master branch)
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
@@ -21,7 +21,19 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      # Cache Gradle dependencies
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: ~/.gradle/caches # Cache the Gradle caches directory
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }} # Generate a key based on OS, Gradle version, and build files
+          restore-keys: |
+            ${{ runner.os }}-gradle- # Fallback key for older caches
+
       # Configure Android SDK environment variables
+      # Note: Caching the SDK itself is less common than caching Gradle,
+      # as installing platforms/build-tools via sdkmanager is usually fast.
+      # We'll keep the installation steps.
       - name: Set Android SDK environment variables
         run: |
           echo "ANDROID_HOME=/usr/local/lib/android/sdk" >> $GITHUB_ENV
@@ -33,6 +45,7 @@ jobs:
         run: yes | sdkmanager --licenses
 
       # Install required SDK components
+      # Install only if the required versions are not present (cached SDK is unlikely here)
       - name: Install additional SDK components
         run: sdkmanager "platforms;android-33" "build-tools;33.0.2"
 
@@ -49,6 +62,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: Azusa-APK
-          # Corrected path to include the 'app/' directory
+          # Corrected path from previous fix
           path: app/build/outputs/apk/debug/*.apk
-
